force-app/main/default/objects/Inventory__c/fields/FA_Reason__c.field-meta.xml
<CustomField>
    <fullName>FA_Reason__c</fullName>
    <label>Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>