force-app/main/default/objects/Inventory__c/fields/FA_Reason_For_Merge__c.field-meta.xml
<CustomField>
    <fullName>FA_Reason_For_Merge__c</fullName>
    <label>Reason For Merge</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Reason 1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>