force-app/main/default/objects/Inventory__c/fields/FA_Site_wide_infrastructure__c.field-meta.xml
<CustomField>
    <fullName>FA_Site_wide_infrastructure__c</fullName>
    <label>Site wide infrastructure</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>