force-app/main/default/objects/Inventory__c/fields/FA_Splitted__c.field-meta.xml
<CustomField>
    <fullName>FA_Splitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Splitted?</label>
    <type>Checkbox</type>
</CustomField>