force-app/main/default/objects/Inventory__c/fields/FA_Update__c.field-meta.xml
<CustomField>
    <fullName>FA_Update__c</fullName>
    <label>Update?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>