force-app/main/default/objects/Inventory__c/fields/Factsheet__c.field-meta.xml
<CustomField>
    <fullName>Factsheet__c</fullName>
    <label>Factsheet</label>
    <type>Url</type>
</CustomField>