force-app/main/default/objects/Inventory__c/fields/FactSheet_Project_Name__c.field-meta.xml
<CustomField>
    <fullName>FactSheet_Project_Name__c</fullName>
    <description>This filed refer on the Factsheet Meraas</description>
    <label>FactSheet Project Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>