force-app/main/default/objects/Inventory__c/fields/FailedWhileBooking__c.field-meta.xml
<CustomField>
    <fullName>FailedWhileBooking__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FailedWhileBooking</label>
    <type>Checkbox</type>
</CustomField>