force-app/main/default/objects/Inventory__c/fields/FAR__c.field-meta.xml
<CustomField>
    <fullName>FAR__c</fullName>
    <label>FAR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>