force-app/main/default/objects/Inventory__c/fields/FileName_UploadedUnits__c.field-meta.xml
<CustomField>
    <fullName>FileName_UploadedUnits__c</fullName>
    <label>Uploaded Units FileName</label>
    <length>25</length>
    <type>Text</type>
</CustomField>