force-app/main/default/objects/Inventory__c/fields/Final_BUA_Arabic__c.field-meta.xml
<CustomField>
    <fullName>Final_BUA_Arabic__c</fullName>
    <description>To capture the internal Area Sqft in Arabic, created for Nexus Migration</description>
    <label>Internal Area Sqft Arabic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>