force-app/main/default/objects/Inventory__c/fields/Floor_Area_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Floor_Area_Ratio__c</fullName>
    <label>Floor Area Ratio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>