force-app/main/default/objects/Inventory__c/fields/Floor_Code__c.field-meta.xml
<CustomField>
    <fullName>Floor_Code__c</fullName>
    <description>Field to track the corresponding floor code information from  Yardi SQL database</description>
    <label>Floor Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>