force-app/main/default/objects/Inventory__c/fields/Floor_Id__c.field-meta.xml
<CustomField>
    <fullName>Floor_Id__c</fullName>
    <description>Field to track the corresponding database id from Yardi SQL database</description>
    <label>Floor Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>