force-app/main/default/objects/Inventory__c/fields/Floor_Plan_Arabic__c.field-meta.xml
<CustomField>
    <fullName>Floor_Plan_Arabic__c</fullName>
    <label>Floor Plan in Arabic</label>
    <type>Url</type>
</CustomField>