force-app/main/default/objects/Inventory__c/fields/Floor_Plan_English__c.field-meta.xml
<CustomField>
    <fullName>Floor_Plan_English__c</fullName>
    <label>Floor Plan in English</label>
    <type>Url</type>
</CustomField>