force-app/main/default/objects/Inventory__c/fields/Floor_Plan_Russian__c.field-meta.xml
<CustomField>
    <fullName>Floor_Plan_Russian__c</fullName>
    <label>Floor Plan in Russian</label>
    <type>Url</type>
</CustomField>