force-app/main/default/objects/Inventory__c/fields/FloorPlanURL__c.field-meta.xml
<CustomField>
    <fullName>FloorPlanURL__c</fullName>
    <label>FloorPlanURL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>