force-app/main/default/objects/Inventory__c/fields/Garage_Area_Sqft__c.field-meta.xml
<CustomField>
    <fullName>Garage_Area_Sqft__c</fullName>
    <defaultValue>0.000</defaultValue>
    <label>Garage Area Sqft</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>