force-app/main/default/objects/Inventory__c/fields/Garden_Area_Sqft__c.field-meta.xml
<CustomField>
    <fullName>Garden_Area_Sqft__c</fullName>
    <label>Garden Area (Sqft)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>