force-app/main/default/objects/Inventory__c/fields/Garden_Area_Sqm__c.field-meta.xml
<CustomField>
    <fullName>Garden_Area_Sqm__c</fullName>
    <label>Garden Area (Sqm)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>