force-app/main/default/objects/Inventory__c/fields/Generate_Factsheet__c.field-meta.xml
<CustomField>
    <fullName>Generate_Factsheet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Generate Factsheet</label>
    <type>Checkbox</type>
</CustomField>