force-app/main/default/objects/Inventory__c/fields/Generate_Proforma__c.field-meta.xml
<CustomField>
    <fullName>Generate_Proforma__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Generate Proforma</label>
    <type>Checkbox</type>
</CustomField>