force-app/main/default/objects/Inventory__c/fields/Generate_Sales_Offer__c.field-meta.xml
<CustomField>
    <fullName>Generate_Sales_Offer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Generate Sales Offer</label>
    <type>Checkbox</type>
</CustomField>