force-app/main/default/objects/Inventory__c/fields/Generate_Sales_Offer_Inv__c.field-meta.xml
<CustomField>
    <fullName>Generate_Sales_Offer_Inv__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Generate Sales Offer Inv</label>
    <type>Checkbox</type>
</CustomField>