force-app/main/default/objects/Inventory__c/fields/GFA_Area_Sqft__c.field-meta.xml
<CustomField>
    <fullName>GFA_Area_Sqft__c</fullName>
    <label>GFA Area Sqft</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>