force-app/main/default/objects/Inventory__c/fields/GFA_Area_Sqft_Ar__c.field-meta.xml
<CustomField>
    <fullName>GFA_Area_Sqft_Ar__c</fullName>
    <description>To Capture the GFA Area Sqft in arabic Format</description>
    <label>GFA Area Sqft Ar</label>
    <length>255</length>
    <type>Text</type>
</CustomField>