force-app/main/default/objects/Inventory__c/fields/GFA_Area_Sqm__c.field-meta.xml
<CustomField>
    <fullName>GFA_Area_Sqm__c</fullName>
    <label>GFA Area Sqm</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>