force-app/main/default/objects/Inventory__c/fields/GFA_Split_SQM__c.field-meta.xml
<CustomField>
    <fullName>GFA_Split_SQM__c</fullName>
    <label>GFA Split (SQM)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>