force-app/main/default/objects/Inventory__c/fields/GFA_SQFT__c.field-meta.xml
<CustomField>
    <fullName>GFA_SQFT__c</fullName>
    <label>GFA (SQFT)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>