force-app/main/default/objects/Inventory__c/fields/GFA_SQFT_Ar__c.field-meta.xml
<CustomField>
    <fullName>GFA_SQFT_Ar__c</fullName>
    <label>GFA SQFT Ar</label>
    <length>255</length>
    <type>Text</type>
</CustomField>