force-app/main/default/objects/Inventory__c/fields/GFA_SQM__c.field-meta.xml
<CustomField>
    <fullName>GFA_SQM__c</fullName>
    <label>GFA (SQM)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>