force-app/main/default/objects/Inventory__c/fields/GFA_Sqm_Ar__c.field-meta.xml
<CustomField>
    <fullName>GFA_Sqm_Ar__c</fullName>
    <description>To Capture the GFA Sqm Arabic format</description>
    <label>GFA Sqm Ar</label>
    <length>255</length>
    <type>Text</type>
</CustomField>