force-app/main/default/objects/Inventory__c/fields/Gifted__c.field-meta.xml
<CustomField>
    <fullName>Gifted__c</fullName>
    <label>Gifted</label>
    <length>255</length>
    <type>Text</type>
</CustomField>