force-app/main/default/objects/Inventory__c/fields/GLA_SQFT__c.field-meta.xml
<CustomField>
    <fullName>GLA_SQFT__c</fullName>
    <label>GLA (SQFT)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>