force-app/main/default/objects/Inventory__c/fields/Handover_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Handover_Completed_Date__c</fullName>
    <label>Handover Completed Date</label>
    <type>Date</type>
</CustomField>