force-app/main/default/objects/Inventory__c/fields/Handover_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Handover_Start_Date__c</fullName>
    <label>Handover Start Date</label>
    <type>Date</type>
</CustomField>