force-app/main/default/objects/Inventory__c/fields/Hospital_Or_Clinic__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Or_Clinic__c</fullName>
    <description>Property Attribute: Indicate whether there is a hospital or clinic on the property</description>
    <label>Hospital Or Clinic</label>
    <length>100</length>
    <type>Text</type>
</CustomField>