force-app/main/default/objects/Inventory__c/fields/Infra_Comments__c.field-meta.xml
<CustomField>
    <fullName>Infra_Comments__c</fullName>
    <description>Used for Land</description>
    <label>Infra Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>