force-app/main/default/objects/Inventory__c/fields/Internal_Area_Sqm__c.field-meta.xml
<CustomField>
    <fullName>Internal_Area_Sqm__c</fullName>
    <label>Internal Area (Sqm)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>