force-app/main/default/objects/Inventory__c/fields/Inventory_ID_18__c.field-meta.xml
<CustomField>
    <fullName>Inventory_ID_18__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inventory ID 18</label>
    <type>Text</type>
</CustomField>