force-app/main/default/objects/Inventory__c/fields/Inventory_Upload_Status__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Upload_Status__c</fullName>
    <label>Inventory Upload Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Existing</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>