force-app/main/default/objects/Inventory__c/fields/InventorySalesOffer__c.field-meta.xml
<CustomField>
    <fullName>InventorySalesOffer__c</fullName>
    <formula>&quot;&amp;solmgr=1&quot; + 
&quot;&amp;id=&quot; + Id +
&quot;&amp;reportid=[PPInv]00O0Y000007jeFu?pv0=&quot; + Id +
&quot;&amp;templateid=a0C0Y00000WY7MY&quot; + 
&quot;&amp;defaultpdf=1&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>InventorySalesOffer</label>
    <type>Text</type>
</CustomField>