force-app/main/default/objects/Inventory__c/fields/Is_Campaign_Changed__c.field-meta.xml
<CustomField>
    <fullName>Is_Campaign_Changed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field can be updated only by system administrator. Sometimes admins are getting request to change campaign after an unit is booked. To handle this, please check this checkbox and update the campaign.</description>
    <label>Is Campaign Changed?</label>
    <type>Checkbox</type>
</CustomField>