force-app/main/default/objects/Inventory__c/fields/Is_Disclosure_Statement_Available__c.field-meta.xml
<CustomField>
    <fullName>Is_Disclosure_Statement_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will be checked if any Disclosure Statement Documents are added to Project</description>
    <label>Is Disclosure Statement Available</label>
    <type>Checkbox</type>
</CustomField>