force-app/main/default/objects/Inventory__c/fields/Is_FSL_DLP__c.field-meta.xml
<CustomField>
    <fullName>Is_FSL_DLP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is FSL DLP?</label>
    <type>Checkbox</type>
</CustomField>