force-app/main/default/objects/Inventory__c/fields/Is_Hot_Property__c.field-meta.xml
<CustomField>
    <fullName>Is_Hot_Property__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Hot Property</label>
    <type>Checkbox</type>
</CustomField>