force-app/main/default/objects/Inventory__c/fields/Is_Sold_to_Cancel__c.field-meta.xml
<CustomField>
    <fullName>Is_Sold_to_Cancel__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to track when the plot is cancelled in Land</description>
    <label>Is Sold to Cancel?</label>
    <type>Checkbox</type>
</CustomField>