force-app/main/default/objects/Inventory__c/fields/Issue_Date_Affection_Plan__c.field-meta.xml
<CustomField>
    <fullName>Issue_Date_Affection_Plan__c</fullName>
    <label>Issue Date - Affection Plan</label>
    <type>Date</type>
</CustomField>