force-app/main/default/objects/Inventory__c/fields/Issue_Date_Title_Deed__c.field-meta.xml
<CustomField>
    <fullName>Issue_Date_Title_Deed__c</fullName>
    <label>Issue Date - Title Deed</label>
    <type>Date</type>
</CustomField>