force-app/main/default/objects/Inventory__c/fields/Kitchen_Type__c.field-meta.xml
<CustomField>
    <fullName>Kitchen_Type__c</fullName>
    <label>Kitchen Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>