force-app/main/default/objects/Inventory__c/fields/Last_Booked_By__c.field-meta.xml
<CustomField>
    <fullName>Last_Booked_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Booked By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Inventory6</relationshipName>
    <type>Lookup</type>
</CustomField>