force-app/main/default/objects/Inventory__c/fields/LatestOwner__c.field-meta.xml
<CustomField>
    <fullName>LatestOwner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Latest Owner</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Inventory1</relationshipName>
    <type>Lookup</type>
</CustomField>