force-app/main/default/objects/Inventory__c/fields/LatestTenant__c.field-meta.xml
<CustomField>
    <fullName>LatestTenant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Latest Tenant</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Inventory</relationshipName>
    <type>Lookup</type>
</CustomField>