force-app/main/default/objects/Inventory__c/fields/Launch_Date__c.field-meta.xml
<CustomField>
    <fullName>Launch_Date__c</fullName>
    <description>This field is used to capture the Project (technically - Property) Launch Date
Renamed to End Date, for Nexus Migration</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>