force-app/main/default/objects/Inventory__c/fields/LB_DCCA_Site_Plan_Availability__c.field-meta.xml
<CustomField>
    <fullName>LB_DCCA_Site_Plan_Availability__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LB:DCCA Site Plan Availability</label>
    <type>Checkbox</type>
</CustomField>