force-app/main/default/objects/Inventory__c/fields/LD_Parcel__c.field-meta.xml
<CustomField>
    <fullName>LD_Parcel__c</fullName>
    <label>LD Parcel #</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>