force-app/main/default/objects/Inventory__c/fields/LD_Parcel_Area_sqm__c.field-meta.xml
<CustomField>
    <fullName>LD_Parcel_Area_sqm__c</fullName>
    <label>LD Parcel Area (sqm)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>