force-app/main/default/objects/Inventory__c/fields/LD_Title_Deed_Issue_Date__c.field-meta.xml
<CustomField>
    <fullName>LD_Title_Deed_Issue_Date__c</fullName>
    <label>LD Title Deed Issue Date</label>
    <type>Date</type>
</CustomField>