force-app/main/default/objects/Inventory__c/fields/Legal_Entity__c.field-meta.xml
<CustomField>
    <fullName>Legal_Entity__c</fullName>
    <description>Legal Company of the Property</description>
    <label>Legal Entity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>