force-app/main/default/objects/Inventory__c/fields/Legal_Entity_Address__c.field-meta.xml
<CustomField>
    <fullName>Legal_Entity_Address__c</fullName>
    <description>This Field is created for Project(Land).</description>
    <label>Legal Entity Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>