force-app/main/default/objects/Inventory__c/fields/Legal_Entity_Code__c.field-meta.xml
<CustomField>
    <fullName>Legal_Entity_Code__c</fullName>
    <label>Legal Entity Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>