force-app/main/default/objects/Inventory__c/fields/Legal_Entity_Name__c.field-meta.xml
<CustomField>
    <fullName>Legal_Entity_Name__c</fullName>
    <description>change label name as Asem request on 24022022</description>
    <label>Seller Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>