force-app/main/default/objects/Inventory__c/fields/Lock_Date__c.field-meta.xml
<CustomField>
    <fullName>Lock_Date__c</fullName>
    <description>Created for Nexus migration, To capture Trigger Lock Date from NKL system</description>
    <label>Trigger Lock Date</label>
    <type>Date</type>
</CustomField>