force-app/main/default/objects/Inventory__c/fields/Maid_Study_Room__c.field-meta.xml
<CustomField>
    <fullName>Maid_Study_Room__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Maid/Study Room</label>
    <type>Checkbox</type>
</CustomField>