force-app/main/default/objects/Inventory__c/fields/ManageInventoryComments__c.field-meta.xml
<CustomField>
    <fullName>ManageInventoryComments__c</fullName>
    <label>Comments</label>
    <type>TextArea</type>
</CustomField>