force-app/main/default/objects/Inventory__c/fields/Manager_for_Blocked_User__c.field-meta.xml
<CustomField>
    <fullName>Manager_for_Blocked_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Manager for Blocked User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Inventory1</relationshipName>
    <type>Lookup</type>
</CustomField>