force-app/main/default/objects/Inventory__c/fields/Managing_Entity__c.field-meta.xml
<CustomField>
    <fullName>Managing_Entity__c</fullName>
    <label>Managing Entity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>