force-app/main/default/objects/Inventory__c/fields/Master_Community__c.field-meta.xml
<CustomField>
    <fullName>Master_Community__c</fullName>
    <label>Master Community</label>
    <length>255</length>
    <type>Text</type>
</CustomField>