force-app/main/default/objects/Inventory__c/fields/Master_Community_Arabic__c.field-meta.xml
<CustomField>
    <fullName>Master_Community_Arabic__c</fullName>
    <label>Master Community (Arabic)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>