force-app/main/default/objects/Inventory__c/fields/Master_Plan_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Master_Plan_Approval_Status__c</fullName>
    <label>Master Plan Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>