force-app/main/default/objects/Inventory__c/fields/Max_Building_Height__c.field-meta.xml
<CustomField>
    <fullName>Max_Building_Height__c</fullName>
    <label>Max. Building Height</label>
    <length>255</length>
    <type>Text</type>
</CustomField>