force-app/main/default/objects/Inventory__c/fields/Max_Plot_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Max_Plot_Coverage__c</fullName>
    <label>Max. Plot Coverage %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>