force-app/main/default/objects/Inventory__c/fields/MCSC__c.field-meta.xml
<CustomField>
    <fullName>MCSC__c</fullName>
    <label>MCSC</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Non-Chargeable</fullName>
            </value>
            <value>
                <fullName>Chargeable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>