force-app/main/default/objects/Inventory__c/fields/MCSC_Comments__c.field-meta.xml
<CustomField>
    <fullName>MCSC_Comments__c</fullName>
    <label>MCSC Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>