force-app/main/default/objects/Inventory__c/fields/Mega_Plot_Number__c.field-meta.xml
<CustomField>
    <fullName>Mega_Plot_Number__c</fullName>
    <label>Mega Plot Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>