force-app/main/default/objects/Inventory__c/fields/Meraas_Filenet_Url__c.field-meta.xml
<CustomField>
    <fullName>Meraas_Filenet_Url__c</fullName>
    <description>New Field for Meraas Migration</description>
    <label>Meraas Filenet Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>