force-app/main/default/objects/Inventory__c/fields/Metro_Station__c.field-meta.xml
<CustomField>
    <fullName>Metro_Station__c</fullName>
    <description>Property Attribute: Indicate how far the metro station is from the property</description>
    <label>Metro Station</label>
    <length>100</length>
    <type>Text</type>
</CustomField>