force-app/main/default/objects/Inventory__c/fields/MEZZANINE_LEVELS__c.field-meta.xml
<CustomField>
    <fullName>MEZZANINE_LEVELS__c</fullName>
    <label>Mezzanine Levels</label>
    <length>255</length>
    <type>Text</type>
</CustomField>