force-app/main/default/objects/Inventory__c/fields/Min_Front_Side_1__c.field-meta.xml
<CustomField>
    <fullName>Min_Front_Side_1__c</fullName>
    <label>Min. Front Side 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>