force-app/main/default/objects/Inventory__c/fields/Min_Rear_Side_3__c.field-meta.xml
<CustomField>
    <fullName>Min_Rear_Side_3__c</fullName>
    <label>Min. Rear Side 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>