force-app/main/default/objects/Inventory__c/fields/Min_Side_2__c.field-meta.xml
<CustomField>
    <fullName>Min_Side_2__c</fullName>
    <label>Min. Side 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>