force-app/main/default/objects/Inventory__c/fields/Mosque__c.field-meta.xml
<CustomField>
    <fullName>Mosque__c</fullName>
    <description>Property Attribute: Indicate access to a mosque</description>
    <label>Mosque</label>
    <length>100</length>
    <type>Text</type>
</CustomField>