force-app/main/default/objects/Inventory__c/fields/NewUnit__c.field-meta.xml
<CustomField>
    <fullName>NewUnit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NewUnit/AwaitingForApproval</label>
    <type>Checkbox</type>
</CustomField>