force-app/main/default/objects/Inventory__c/fields/No_of_Parkings__c.field-meta.xml
<CustomField>
    <fullName>No_of_Parkings__c</fullName>
    <label>No.of Parkings</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>