force-app/main/default/objects/Inventory__c/fields/No_of_Parkings_Arabic__c.field-meta.xml
<CustomField>
    <fullName>No_of_Parkings_Arabic__c</fullName>
    <label>No of Parkings(Arabic)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>