force-app/main/default/objects/Inventory__c/fields/Notes_Receivable__c.field-meta.xml
<CustomField>
    <fullName>Notes_Receivable__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Notes Receivable</label>
    <referenceTo>AR_GL_Account__c</referenceTo>
    <relationshipName>Inventory1</relationshipName>
    <type>Lookup</type>
</CustomField>