force-app/main/default/objects/Inventory__c/fields/NSA_Area_Sqft__c.field-meta.xml
<CustomField>
    <fullName>NSA_Area_Sqft__c</fullName>
    <label>NSA Area (Sqft)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>