force-app/main/default/objects/Inventory__c/fields/NSA_Area_Sqft_in_Arabic__c.field-meta.xml
<CustomField>
    <fullName>NSA_Area_Sqft_in_Arabic__c</fullName>
    <label>NSA Area (Sqft) in Arabic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>