force-app/main/default/objects/Inventory__c/fields/NSA_Area_Sqm_in_Arabic__c.field-meta.xml
<CustomField>
    <fullName>NSA_Area_Sqm_in_Arabic__c</fullName>
    <description>placeholder for Arabic value</description>
    <label>NSA Area (Sqm) in Arabic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>