force-app/main/default/objects/Inventory__c/fields/Number_Of_Delays__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Delays__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Number Of Delays</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>