force-app/main/default/objects/Inventory__c/fields/OnHold_User__c.field-meta.xml
<CustomField>
    <fullName>OnHold_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OnHold Salesforce User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Inventory7</relationshipName>
    <type>Lookup</type>
</CustomField>