force-app/main/default/objects/Inventory__c/fields/Open_PO_Amount__c.field-meta.xml
<CustomField>
    <fullName>Open_PO_Amount__c</fullName>
    <label>Open PO Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>