force-app/main/default/objects/Inventory__c/fields/Opportunity_Associated__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Associated__c</fullName>
    <label>Opportunity Associated</label>
    <length>20</length>
    <type>Text</type>
</CustomField>