force-app/main/default/objects/Inventory__c/fields/Owner_of_Affection_Plan__c.field-meta.xml
<CustomField>
    <fullName>Owner_of_Affection_Plan__c</fullName>
    <label>Owner of Affection Plan</label>
    <length>255</length>
    <type>Text</type>
</CustomField>